--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <a href="https://www.youtube.com/channel/UCrBmMF1sbf0EJ3IlE5eMDjA" target="_blank-"><i
                         class="fa fa-youtube-play" style="color:red"></i></a>
                 <a href="https://www.whatsapp.com/" target="_blank"><i class="fa fa-whatsapp" style="color:green"></i></a>
-                <a href="https://github.com/CodeWithNirmeet" target="_blank"><i class="fa fa-github"
+                <a href="https://github.com/NirmeetGandhi" target="_blank"><i class="fa fa-github"
                         style="color:#36342d"></i></a>
                 <a href="https://www.linkedin.com/in/nirmeet-gandhi-738609215/" target="_blank"><i class="fa fa-linkedin-square"
                         style="color:blue"></i></a>
