--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             </div> -->
             <div class="btn-about">
                 <button class="btn" style="color: red;"> <a href="Nirmeet-Gandhi Resume Main.pdf" target="_blank"> Download CV</a></button>
-                <button class="btn"> <a href="https://github.com/CodeWithNirmeet" target="_blank" style="color: 6cc644;">Github</a></button>
+                <button class="btn"> <a href="https://github.com/NirmeetGandhi" target="_blank" style="color: 6cc644;">Github</a></button>
                 <button class="btn"> <a href="https://www.linkedin.com/in/nirmeet-gandhi-738609215/" target="_blank" style="color: blue;">Linkedin</a></button>
                 <button class="btn"> <a href="https://www.instagram.com/nirmeet_gandhi/" target="_blank" style="color: palevioletred;">Instagram</a></button>
                 <button class="btn"> <a href="https://www.facebook.com/profile.php?id=100070832375556" style="color: blue;" target="_blank">Facebook</a></button>
@@ -112,7 +112,7 @@
             <a href="https://www.linkedin.com/in/nirmeet-gandhi-738609215/" target="_blank"><i
                     class="fa fa-linkedin-square" style="color:blue"></i></a>
             <a href="https://www.whatsapp.com/" target="_blank"><i class="fa fa-whatsapp" style="color:green"></i></a>
-            <a href="https://github.com/CodeWithNirmeet" target="_blank"><i class="fa fa-github"
+            <a href="https://github.com/NirmeetGandhi" target="_blank"><i class="fa fa-github"
                     style="color:#36342d"></i></a>
             <a href="https://www.instagram.com/nirmeet_gandhi/" target="_blank"><i class="fa fa-instagram"
                     style="color: palevioletred"></i></a>
